# wso2-wsf-cpp-gg

./: .gitignore  Makefile.am  README.md  build.bat  build_samples.sh  configure.ac  configure.in  diff_with_upstream.sh
examples/: Makefile.am  configure.ac  samples.mk
examples/callbacks/password_callback/: pwcb.cpp
examples/clients/: Makefile.am
examples/clients/ntlm/: Makefile.am  ntlm_post.cpp
include/: Stub.h  (+7 more)
wsf_c/rampartc/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  bindist.sh  build.sh  configure.ac  project.properties  project.xml  release_process  sd.sh
wsf_c/rampartc/ides/Rampart/: Rampart.sln
wsf_c/rampartc/include/: axis2_key_type.h  openssl_cipher_ctx.h  openssl_cipher_property.h  openssl_constants.h  openssl_crypt.h  openssl_digest.h  openssl_hmac.h  openssl_pem.h  openssl_pkcs12.h  openssl_pkcs12_keystore.h  openssl_pkey.h  openssl_rsa.h  openssl_sign.h  openssl_util.h  openssl_x509.h  oxs_asym_ctx.h  oxs_axiom.h  oxs_axis2_utils.h  oxs_buffer.h  oxs_c14n.h  oxs_cipher.h  oxs_constants.h  oxs_ctx.h  oxs_derivation.h  oxs_encryption.h  oxs_error.h  oxs_iv.h  oxs_key.h  oxs_key_mgr.h  oxs_saml_token.h  oxs_sign_ctx.h  oxs_sign_part.h  oxs_signature.h  oxs_tokens.h  oxs_transform.h  oxs_utility.h  oxs_x509_cert.h  oxs_xml_encryption.h  oxs_xml_key_info_builder.h  oxs_xml_key_processor.h  (+46 more)
wsf_c/rampartc/samples/: ABOUT_SAMPLES  INSTALL  Makefile.am  README  build.sh  configure.ac
wsf_c/rampartc/samples/authn_provider/: Makefile.am  authn_provider.c
wsf_c/rampartc/samples/callback/: Makefile.am  pwcb.c
wsf_c/rampartc/samples/client/: Makefile.am
wsf_c/rampartc/samples/credential_provider/: Makefile.am
wsf_c/rampartc/samples/data/: Makefile.am  passwords.txt  server_axis2.xml
wsf_c/rampartc/samples/replay_detector/: Makefile.am  rampart_replay_detector_flat_file.c
wsf_c/rampartc/samples/sct_provider/: Makefile.am  sct_provider_hash_map.c  sct_provider_stored_key.c
wsf_c/rampartc/samples/secpolicy/: README  deploy.bat  deploy.js  deploy.sh  run_all.bat  run_all.js  run_all.sh  test_scen.bat  test_scen.sh
wsf_c/rampartc/samples/server/: Makefile.am
wsf_c/rampartc/src/: Makefile.am
wsf_c/rampartc/src/core/: Makefile.am  mod_rampart.c
wsf_c/rampartc/src/data/: Makefile.am  module.xml  rahas_module.xml
wsf_c/rampartc/src/handlers/: rampart_in_handler.c  rampart_out_handler.c
wsf_c/rampartc/src/omxmlsec/: Makefile.am  asym_ctx.c  axiom.c  buffer.c  cipher.c  ctx.c  derivation.c  encryption.c  error.c  iv.c  key.c  key_mgr.c  sign_ctx.c  sign_part.c  signature.c  transform.c  transforms_factory.c  utility.c  x509_cert.c  xml_encryption.c  xml_key_processor.c  xml_signature.c
wsf_c/rampartc/src/rahas/: Makefile.am  mod_rahas.c  rahas_in_handler.c  rahas_request_processor.c
wsf_c/rampartc/src/secconv/: Makefile.am  sct_provider_utility.c  security_context_token.c
wsf_c/rampartc/src/trust/: Makefile.am  claims.c  context.c  entropy.c  life_time.c  policy_util.c  rst.c  rstr.c  sts_client.c  token.c  trust_util.c
wsf_c/rampartc/src/util/: rampart_config.c  rampart_context.c  rampart_crypto_util.c  rampart_encryption.c  rampart_engine.c  rampart_error.c  rampart_handler_util.c  rampart_issued.c  rampart_issued_token.c  rampart_policy_validator.c  rampart_replay_detector.c  rampart_saml.c  rampart_saml_token.c  rampart_sec_header_builder.c  rampart_sec_header_processor.c  rampart_sec_processed_result.c  rampart_signature.c  rampart_timestamp_token.c  rampart_token_builder.c  rampart_token_processor.c  rampart_username_token.c  rampart_util.c
wsf_c/rampartc/test/omxmlsec/: test.c
wsf_c/rampartc/xdocs/: archived_news.html  coding_conventions.html  download.html  index.html  lists_issues.html
wsf_c/rampartc/xdocs/docs/: configurations.html  installationguide.html  rampartc_manual.html
wsf_c/sandesha2c/: AUTHORS  CREDITS  INSTALL  Makefile.am  NEWS  NOTICE  README  bindist.sh  build.sh  dist.sh  project.properties  project.xml
wsf_c/sandesha2c/config/: axis2.xml  module.xml  sqlite_schema.sh
wsf_c/sandesha2c/include/: sandesha2_accept.h  sandesha2_ack_final.h  sandesha2_ack_mgr.h  sandesha2_ack_none.h  sandesha2_ack_range.h  sandesha2_ack_requested.h  sandesha2_acks_to.h  sandesha2_address.h  sandesha2_app_msg_processor.h  sandesha2_client.h  sandesha2_close_seq.h  sandesha2_close_seq_res.h  sandesha2_close_seq_res_msg_processor.h  sandesha2_constants.h  sandesha2_create_seq.h  sandesha2_create_seq_bean.h  sandesha2_create_seq_mgr.h  sandesha2_create_seq_res.h  sandesha2_endpoint.h  sandesha2_error.h  sandesha2_expires.h  sandesha2_fault_code.h  sandesha2_fault_mgr.h  sandesha2_identifier.h  sandesha2_invoker_bean.h  sandesha2_invoker_mgr.h  sandesha2_last_msg.h  sandesha2_last_msg_number.h  sandesha2_make_connection.h  sandesha2_mc_address.h  sandesha2_msg_creator.h  sandesha2_msg_ctx.h  sandesha2_msg_number.h  sandesha2_msg_pending.h  sandesha2_msg_retrans_adjuster.h  sandesha2_msg_validator.h  sandesha2_nack.h  sandesha2_next_msg_bean.h  sandesha2_next_msg_mgr.h  sandesha2_permanent_create_seq_mgr.h  (+23 more)
wsf_c/sandesha2c/samples/: INSTALL  Makefile.am  README  build.sh  configure.ac
wsf_c/sandesha2c/samples/RM10SampleService/: Makefile.am  rm_sample_svc.c  rm_sample_svc.h  rm_sample_svc_skel.c  services.xml
wsf_c/sandesha2c/samples/RM11SampleService/: Makefile.am  rm_sample_svc_skel.c  services.xml
wsf_c/sandesha2c/samples/policy/: Makefile.am  rm10-policy.xml  rm11-policy.xml
wsf_c/sandesha2c/samples/resources/: Makefile.am
wsf_c/sandesha2c/samples/rm_amqp/: Makefile.am
wsf_c/sandesha2c/src/: Makefile.am
wsf_c/sandesha2c/xdocs/: download.html  index.html
wsf_c/savanc/: AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  build.sh  configure.ac
wsf_c/savanc/include/: savan_client.h  savan_constants.h  savan_db_mgr.h  savan_error.h  savan_filter_mod.h  savan_msg_recv.h  savan_publisher.h  savan_sub_processor.h  savan_subs_mgr.h  savan_subscriber.h  savan_util.h
wsf_c/savanc/samples/: build.sh  configure.ac
wsf_c/savanc/src/: Makefile.am
wsf_c/savanc/xdocs/: download.html  index.html
(+478 files in other folders)
