#samplesdir = $(prefix)/samples

policydir = $(prefix)/samples/bin/sandesha2/policy

SUBDIRS = resources \
		  policy \
		  RM10SampleService \
		  RM11SampleService \
		  rm_echo_1_0 \
		  rm_echo_1_1 \
		  rm_ping_1_0 \
		  rm_ping_1_1 \
		  rm_mtom_1_0 \
		  rm_echo_single_1_0 \
		  rm_echo_single_1_1 \
		  rm_amqp 

#samples_DATA = Makefile.am Makefile.in

policy_DATA = policy/rm10-policy.xml policy/rm11-policy.xml
