resdir=$(prefix)/samples/src/rampartc/data/keys/ahome
res_DATA= a_key.pem  a_req.pem b_cert.cert a_cert.cert alice_key.pem alice_cert.cert bob_cert.cert alice_kstore.p12 bob_key.pem
EXTRA_DIST= a_key.pem  a_req.pem b_cert.cert a_cert.cert alice_key.pem alice_cert.cert bob_cert.cert alice_kstore.p12
